syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

message ClimateSensorProto {
  int32 temperature_c = 1;
  int32 humidity = 2;
  int32 co2_level = 3;
}

// Событие датчика освещённости
message LightSensorProto {
  int32 link_quality = 1;
  int32 luminosity = 2;
}

// Событие датчика движения
message MotionSensorProto {
  int32 link_quality = 1;
  bool motion = 2;
  int32 voltage = 3;
}

// Событие переключателя
message SwitchSensorProto {
  bool state = 1;
}

// Событие датчика температуры
message TemperatureSensorProto {
  int32 temperature_c = 4;
  int32 temperature_f = 5;
}

// Общее событие сенсора
message SensorEventProto {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string hubId = 3;
  oneof payload {
    ClimateSensorProto climate_sensor_event = 4;
    LightSensorProto light_sensor_event = 5;
    MotionSensorProto motion_sensor_event = 6;
    SwitchSensorProto switch_sensor_event = 7;
    TemperatureSensorProto temperature_sensor_event = 8;
  }
}