syntax = "proto3";

package telemetry.service.collector;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.service.collector";

import "google/protobuf/empty.proto";
import "telemetry/message/hub_event.proto";
import "telemetry/message/sensor_event.proto";

// Сервис CollectorController для обработки событий
service CollectorController {
  // Метод для отправки события хаба
  rpc CollectHubEvent (message.event.HubEventProto) returns (google.protobuf.Empty);

  // Метод для отправки события сенсора
  rpc CollectSensorEvent (message.event.SensorEventProto) returns (google.protobuf.Empty);
}